--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,9 +34,9 @@ jobs:
         run: dotnet publish src/RonSijm.Blammit/src/RonSijm.Blammit/RonSijm.Blammit.csproj -c:Release -p:GHPages=true -o dist/Blammit --nologo
 
       - name: Commit wwwroot to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@3.7.1
+        uses: JamesIves/github-pages-deploy-action@4
         with:
-          GITHUB_TOKEN: ${{ secrets.TOKEN }}
-          BRANCH: gh-pages
-          FOLDER: dist/Blammit/wwwroot
-          SINGLE-COMMIT: true
+          token: ${{ secrets.TOKEN }}
+          branch: gh-pages
+          folder: dist/Blammit/wwwroot
+          single-commit: true
